# python-wrapping

./: README.md  install.sh
.github/workflows/: python-test.yml
build-systems/meson/: LICENSE  README.md  meson.build  pyproject.toml
build-systems/meson/src/cpp/: ext_nano.cpp
build-systems/scikit-build-core/: CMakeLists.txt  pyproject.toml
build-systems/scikit-build-core/src/cpp/: CMakeLists.txt  ext_nano.cpp
build-systems/scikit-build-core/src/wrapping/scikit_build_core/: __init__.py
build-systems/setuptools/: CMakeLists.txt  pyproject.toml  setup.py
build-systems/setuptools/src/wrapping/setuptools/: __init__.py
conda/: environment.yml
wrapping/: README.md
wrapping/boost/: CMakeLists.txt  pyproject.toml
wrapping/boost/src/cpp/: CMakeLists.txt  ext_boost.cpp
wrapping/boost/src/wrapping/boost/: __init__.py
wrapping/boost/test/: test_square_boost.py  test_vector_boost.py
wrapping/cython/: pyproject.toml
wrapping/cython/src/wrapping/cython_ex/: __init__.py  example.pyx  square.h  vector2.hpp
wrapping/cython/test/: test_square_cython.py  test_vector_cython.py
wrapping/fortran/: CMakeLists.txt  pyproject.toml
wrapping/fortran/src/fortran/: ext_fortran.f  ext_fortran2.f90
wrapping/fortran/src/wrapping/fortran/: __init__.py
wrapping/fortran/test/: test_square_fortran.py
wrapping/nanobind/: CMakeLists.txt  pyproject.toml
wrapping/nanobind/src/cpp/: ext_nano.cpp
wrapping/nanobind/src/test/: test_square.py  test_square_nano.py
wrapping/nanobind/src/wrapping/nanobind/: __init__.py
wrapping/nanobind/test/: test_square_nano.py  test_vector_nano.py
wrapping/pybind/: CMakeLists.txt  pyproject.toml
wrapping/pybind/src/cpp/: CMakeLists.txt  ext_pybind.cpp
wrapping/pybind/src/wrapping/pybind/: __init__.py
wrapping/pybind/test/: test_square.py  test_square_pybind.py  test_vector_pybind.py
wrapping/shell/: CMakeLists.txt  pyproject.toml
wrapping/shell/src/cpp/: CMakeLists.txt  square.cpp
wrapping/shell/src/wrapping/shell/: __init__.py  square.py
wrapping/shell/test/: test_square_shell.py
