[build-system]
requires = ["setuptools", "cmake", "nanobind"]
build-backend = "setuptools.build_meta"

[project]
name = "wrapping.setuptools"
authors = [
    {name = "Aurélien Besnier"},
]
description = "python wrapping"
requires-python = ">=3.9"
keywords = ["c++", "python", "wrapping"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
version = "0.1.0"
dependencies = ["pytest", "pytest-benchmark"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.urls]
Homepage = "https://github.com/AurelienBesnier/python-wrapping"
"Bug Tracker" = "https://github.com/AurelienBesnier/python-wrapping/issues"
Discussions = "https://github.com/AurelienBesnier/python-wrapping/discussions"
Changelog = "https://github.com/AurelienBesnier/python-wrapping/releases"
